--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 984px;;
+  max-width: 984px;
 
   padding: 56px 148px 0;
   margin: 0 auto;
