--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -1,7 +1,7 @@
 .footer__links {
   display: grid;
   grid-template-columns: repeat(5, min-content);
-  grid-gap: 18px;
+  gap: 18px;
   list-style-type: none;
 
   margin: 0;
@@ -11,6 +11,6 @@
 @media (width < 768px) {
   .footer__links {
     grid-template-columns: 1fr;
-    grid-gap: 32px;
+    gap: 32px;
   }
 }
