--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,13 @@
-@import url(../fonts/inter.css);
 @import url(../vendor/normalize.css);
+@import url(../fonts/inter.css);
 @import url(../blocks/links-hover/links-hover.css);
 @import url(../pages/index.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__link/header__link.css);
-@import url(../blocks/header/__link/_status/header__link_status_selected.css);
+@import url(../blocks/header/__current-lang/header__current-lang.css);
+@import url(../blocks/main/main.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
@@ -30,7 +32,6 @@
 @import url(../blocks/cover/__overlay/cover__overlay.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__title/cover__title.css);
-@import url(../blocks/cover/__background/cover__background.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/footer/__link/footer__link.css);
