--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -8,7 +8,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
-  overflow: hidden;
   box-sizing: border-box;
   z-index: 0;
   text-decoration: none;
@@ -16,7 +15,6 @@
   width: 100%;
   height: 100%;
   max-width: 1184px;
-  max-height: 740px;
   aspect-ratio: 1184 / 740;
 
   margin: 0;
@@ -31,7 +29,7 @@
   display: block;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,1);
+  background-color: #2A2C2F;
   opacity: 0.5;
   z-index: -1;
   transition: opacity 0.2s ease-in-out;
