--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -11,6 +11,11 @@
   color: #FFFFFF;
 
   margin: 0 0 0 18px;
+  padding: 0;
+}
+
+.header__link:first-child {
+  margin: 0;
 }
 
 @media (width < 768px) {
