--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -14,6 +14,12 @@
   margin: 0;
 }
 
+@media (width < 1024px) {
+  .place__paragraph {
+    font-size: 16px;
+  }
+}
+
 @media (width < 768px) {
   .place__paragraph {
     margin: 0 16px 26px;
