--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -12,14 +12,16 @@
 @media screen and (1024px <= width < 1280px) {
   .place {
     grid-template-columns: minmax(440px, 460px) minmax(456px, 484px);
-    gap: 48px calc((40 - 32) * (100vw - 1024px) / (1280 - 1024) + 32px);
+    /* gap: 48px calc((40 - 32) * (100vw - 1024px) / (1280 - 1024) + 32px); */
+    gap: 48px 32px;
   }
 }
 
 @media screen and (768px <= width < 1024px) {
   .place {
     grid-template-columns: minmax(340px, 440px) minmax(352px, 456px);
-    gap: 48px calc((32 - 26) * (100vw - 768px) / (1024 - 768) + 26px);
+    /* gap: 48px calc((32 - 28) * (100vw - 768px) / (1024 - 768) + 28px); */
+    gap: 48px 28px;
   }
 }
 
